assembly/test/failing/defined_multiple.asm
number dw 0x110
number db "hello world"